Update python functions and code snippets to do stuff.ipynb
Added reverse dict code

--- a/python functions and code snippets to do stuff.ipynb
+++ b/python functions and code snippets to do stuff.ipynb
@@ -237,7 +237,7 @@
     "#### 9. Reverse Dictionary\n",
     "\n",
     "```py3\n",
-    "revresed = \n",
+    "revresed = {v: k for k, v in dictionary.items()}\n",
     "```"
    ]
   }
